# ChangeLog for sys-devel/libperl
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/libperl/ChangeLog,v 1.151 2010/02/03 00:15:25 hanno Exp $

  03 Feb 2010; Hanno Boeck <hanno@gentoo.org> libperl-5.8.8-r2.ebuild,
  libperl-5.10.1.ebuild:
  Change license, Perl is Artistic or GPL-1 or later. We can't express or
  later for now, so adding all GPL-1/2/3.

  11 Dec 2009; Brent Baude <ranger@gentoo.org> libperl-5.10.1.ebuild:
  Marking libperl-5.10.1 ~ppc64 for bug 288028

  09 Dec 2009; Raúl Porcel <armin76@gentoo.org> libperl-5.10.1.ebuild:
  Add ~sh wrt #288028

  16 Nov 2009; Raúl Porcel <armin76@gentoo.org> libperl-5.10.1.ebuild:
  Add ~alpha/~ia64/~s390/~sparc wrt #288028

  15 Nov 2009; Raúl Porcel <armin76@gentoo.org> libperl-5.10.1.ebuild:
  Add ~m68k wrt #288028, thanks to kolla for testing

  04 Nov 2009; Michael Haubenwallner <haubi@gentoo.org>
  libperl-5.8.8-r2.ebuild, +files/libperl-5.8.8-ccld-cflags.patch:
  Respect CFLAGS even for linking when done with compiler

  27 Oct 2009; Mounir Lamouri <volkmar@gentoo.org> libperl-5.10.1.ebuild:
  Keywording for ppc, bug 288028

  21 Oct 2009; Markus Meier <maekke@gentoo.org> libperl-5.10.1.ebuild:
  add ~amd64/~arm/~x86, bug #288028

  13 Oct 2009; Jeroen Roovers <jer@gentoo.org> libperl-5.10.1.ebuild:
  Marked ~hppa (bug #288028).

  07 Oct 2009; Torsten Veller <tove@gentoo.org> libperl-5.10.1.ebuild:
  Different way to remove libperl link. Needed for perserve-libs

  27 Sep 2009; Torsten Veller <tove@gentoo.org> libperl-5.10.1.ebuild:
  Remove orphaned symbolic link

*libperl-5.10.1 (27 Sep 2009)

  27 Sep 2009; Torsten Veller <tove@gentoo.org> +libperl-5.10.1.ebuild:
  Version bump

  29 May 2009; Torsten Veller <tove@gentoo.org> -libperl-5.8.8-r1.ebuild:
  Remove security vulnerable version for bug #271738

  02 May 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  libperl-5.8.8-r2.ebuild:
  Respect LDFLAGS (bug #181464).
