@@ -23,7 +23,7 @@ AUX libperl-darwin-install_name.patch 404 RMD160 343c4cd6363976a19fd87ab16bc931e
 AUX libperl-noksh.patch 611 RMD160 6ddb9e7140c60e05042c3c488c97399a86f965fc SHA1 61bf5bb0955bd04a758d1381fa4260ed9fdbb1d1 SHA256 0861f7f54c184e99a0ffeebeab9420d969d2002f921bc3fb14841a1e24be1f5e
 AUX perl-hppa-pa7200-configure.patch 446 RMD160 ab902e2b5cf7f96023e0e267f170401b036dd4f5 SHA1 fcb7e61cdf1ce1c9993f257507b3289ce45382d7 SHA256 4fe6a010dbdc39325f4003e7ccd02cb7996b4a99b64ab0fa8b12d6fe67f87a31
 DIST perl-5.8.8.tar.bz2 10123359 RMD160 e78f26d9b96e6db35f946ad4ff55e3a69385c71b SHA1 4aab490040727ca4419098720eca2ba4367df539 SHA256 818a140d9c04ea8dab3a05104b34ced7f7d9d0a91bfed91baf89a84d0dfb1bc9
-EBUILD libperl-5.10.1-r00.1.ebuild 944 RMD160 08da6c9f7358d52ad7c2b55972ef18a803cd5d09 SHA1 0f1f2ec6f084037083a7c00a7eaa90f72d4db7be SHA256 541a251b3db93aecde7f4b3827103d29ad426aef117aec64fb17120f555d09b3
-EBUILD libperl-5.8.8-r2.ebuild 14803 RMD160 a7ff0b508834a45ec4149d7520929afa6c9f9c56 SHA1 a3ea7df5036bf739a211f812ea3dc08f81c70643 SHA256 0c94972caaf8490688b5b6c72995b363c7f081624f1827af25e6a8128761af28
-MISC ChangeLog 21741 RMD160 657d34a38efb481b63273ab00d7a99a841ef7988 SHA1 bb17a74262766721f95490445888c784fb9fe806 SHA256 69cdd19bbdd7cd4e279992df7f118888d8aad3fb1a2b29e5287c831328e5a5d3
+EBUILD libperl-5.10.1-r00.1.ebuild 947 RMD160 9b45674abed1e0f76808b3529eb3358198a14419 SHA1 9ca1b2c8e868034ba2ac748a6108f01b504ee624 SHA256 94a7ad66077d912e6cc12e8a1b88d21a47b00314a8604c45c72d3075c8cfa541
+EBUILD libperl-5.8.8-r2.ebuild 14736 RMD160 3577dfbba60ce18e6858c07e5258efc2ff60d0a6 SHA1 542e75ca0fca86af82617f0997240f7ab943bde2 SHA256 409eda937211f90ee45a765cdc7f89d2ebfc5b6c71d00a634b65e281ba714b33
+MISC ChangeLog 21954 RMD160 c6ce45e445fe4042657269e9fef90efc2f68fb3f SHA1 9402b8fdc4b84d08addf94fe6988b82c7305e4b2 SHA256 c17a588eb3d9af047984bb09cd46663fc370e326629222e29cfd0596db423576
 MISC metadata.xml 403 RMD160 1cda5ea2e30a403f93919ff6517319385ea1aa56 SHA1 f2f65146ecf4c7f65e707259286bea45418b65b1 SHA256 71229202663c60ee0e512c81936ceb8a9b70e95c211a4615a14592aa62ea823a
