@@ -1,6 +1,6 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/libperl/libperl-5.8.8-r2.ebuild,v 1.13 2010/02/03 00:15:25 hanno Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/libperl/libperl-5.8.8-r2.ebuild,v 1.14 2010/03/31 18:48:44 armin76 Exp $
 
 # The basic theory based on comments from Daniel Robbins <drobbins@gentoo.org>.
 #
@@ -191,9 +191,7 @@ src_compile() {
 
 	# Perl has problems compiling with -Os in your flags
 	# some arches and -O do not mix :)
-	use arm && replace-flags -O? -O1
 	use ppc && replace-flags -O? -O1
-	use ia64 && replace-flags -O? -O1
 	# Perl has problems compiling with -Os in your flags with glibc
 	use elibc_uclibc || replace-flags "-Os" "-O2"
 	( gcc-specs-ssp && use ia64 ) && append-flags -fno-stack-protector
